test/errors/js_errors2.input.asm
* = $801

!use "./js_errors2" as p ; this succeeds

!let a = p(0) ; this fails
